<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_frag_filter_type_radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/img_frag_filter_type_radiobutton_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/img_expand_filter_content_desc"
                android:src="@drawable/ic_outline_expand_more_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_frag_filter_type_radiobutton_selected_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_button_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lbl_frag_filter_type_radiobutton_title"
                app:layout_constraintTop_toBottomOf="@+id/lbl_frag_filter_type_radiobutton_title"
                tools:text="Guitarras" />

            <TextView
                android:id="@+id/lbl_frag_filter_type_radiobutton_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_filter_categories_choose_category"
                app:layout_constraintBottom_toTopOf="@+id/txt_frag_filter_type_radiobutton_selected_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_frag_filter_type_radiobuttons_clean"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/filters_background_color"
        android:gravity="start|center_vertical"
        android:text="@string/lbl_clean_filters"
        android:textColor="@color/button_primary_color"
        app:cornerRadius="0dp" />


    <RadioGroup
        android:id="@+id/rg_frag_filter_type_radiobutton_avialable_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/filters_background_color"
        android:divider="@android:drawable/divider_horizontal_textfield"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_frag_filter_type_radioButtons">

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/filtersRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_button_color"
            tools:text="Eléctricas" />
    </RadioGroup>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>